hdf5-derive/tests/compile-fail/empty-struct.stderr
error: cannot derive `H5Type` for empty structs
 --> $DIR/empty-struct.rs:7:8
  |
7 | struct Foo {}
  |        ^^^
